✨ Login, autenticação e armazenamento de token com cookies adicionado

--- a/server/public/html/login.html
+++ b/server/public/html/login.html
@@ -18,6 +18,14 @@
          <br>
          <input type="submit" value="Login">
       </form>
+
+      <span>Não tem uma conta? <a class="register-redirect">Register</a></span>
    </div>
+
+<script>
+   document.querySelector('.register-redirect').addEventListener('click', () => {
+      window.location.href = '/register'
+   })
+</script>
 </body>
 </html>
