--- a/server/public/html/index.html
+++ b/server/public/html/index.html
@@ -14,15 +14,18 @@
          <h1>Bem-vindo ao Chat</h1>
       </header>
 
-      <section id="message-container">
-         <!-- Aqui as mensagens serão renderizadas -->
+<!-- TODO Alterar e criar arquivos HTML para os chats, sala principal etc... -->
+      
+
+      <!-- <section id="message-container">
+         <!-- * Aqui as mensagens serão renderizadas
       </section>
 
       <form id="message-form">
          <input type="text" id="message-input" placeholder="Digite sua mensagem...">
          <button type="submit" id="submit-button">Enviar</button>
       </form>
-   </main>
+   </main> -->
 
    <footer>
       <p>&copy; 2023 Meu Chat</p>
