🐛 ✨ Funções para criação de sala de chat, com objeto com usuarios, nome, id e redirecionamento para página principal prontos

--- a/server/public/html/index.html
+++ b/server/public/html/index.html
@@ -36,7 +36,7 @@
       <div class="create-form">
          <button class="close-modal"><ion-icon size="large" name="close-circle-outline"></ion-icon></button>
          <h2>Criar sala de chat</h2>
-         <form">
+         <form class="chat-form">
             <label for="chat-name">
                Nome da sala:
                <input type="text" name="chat-name" id="chat-name">
@@ -44,7 +44,7 @@
 
             <label for="chat-participants">
                Escolha quem vai estar na sua sala:
-               <select name="chat-participants[]" id="chat-participants" multiple>
+               <select name="chat-participants" id="chat-participants" multiple>
                   <!-- OPTIONS COM USUARIOS -->
                </select>
             </label>
