🚧 tentando fazer redirecionamento para sala de chat

--- a/server/public/html/index.html
+++ b/server/public/html/index.html
@@ -18,9 +18,12 @@
       </header>
 
 <!-- TODO Alterar e criar arquivos HTML para os chats, sala principal etc... -->
-      <section class="chats">
-         <!-- SALAS DE CHAT -->
-      </section>
+      <div class="chat-rooms">
+         <h2>Salas de Chat:</h2>
+         <section class="chats">
+            <!-- SALAS DE CHAT -->
+         </section>
+      </div>
 
       <!-- <section id="message-container">
          <!-- * Aqui as mensagens serão renderizadas
